--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,4 +3,37 @@
         width: 98% !important;
         height: 120% !important;
     }
+    .home {
+        margin-top: 20px;
+    }
+    .navbar-brand {
+        margin-right: -16px !important;
+    }
+}
+
+@media screen and (min-width: 576px) {
+    .nav-item {
+        margin-bottom: 50px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .nav-item {
+        margin-bottom: 10px;
+    }
+    .home {
+        margin-left: -30px;
+    }
+}
+
+@media screen and (min-width: 1012px) {
+    .home {
+        margin-left: -10px;
+    }
+}
+
+@media screen and (min-width: 1022px) {
+    .home {
+        margin-left: 0px;
+    }
 }
