--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -113,7 +113,7 @@ body {
     position: absolute;
     top: -7px;
     left: 0;
-    background-color:  rgba(116, 3, 255, 0.476) !important;
+    background-color:  rgba(3, 255, 230, 0.476) !important;
     width: 30%;
     height: 3px;
     transition:all 0.3s ease 0s;
@@ -123,7 +123,7 @@ body {
     position: absolute;
     bottom: -7px;
     right: 0;
-    background-color:  rgba(116, 3, 255, 0.476) !important;
+    background-color:  rgba(3, 255, 230, 0.476) !important;
     width: 30%;
     height: 3px;
     transition:all 0.3s ease 0s;
@@ -133,7 +133,7 @@ body {
 .btn.active:before,
 .btn.active:after{
     width: 100%;
-    background-color:rgb(144, 0, 144) !important;
+    background-color:rgb(0, 144, 144) !important;
 }
 
 @media screen and (max-width: 575px){
@@ -152,13 +152,13 @@ body {
 
   .btn-bd-primary:hover {
     color: white !important;
-    background-color:  rgba(116, 3, 255, 0.814) !important;
-    border-color: rgba(116, 3, 255, 0.814) !important;
+    background-color:  rgba(3, 226, 255, 0.814) !important;
+    border-color: rgba(3, 226, 255, 0.814) !important;
   }
   .btn-bd-primary:active {
     color: white !important;
-    background-color: rgba(116, 3, 255, 0.243)  !important;
-    border-color:  rgba(116, 3, 255, 0.288)  !important;
+    background-color: rgba(3, 255, 255, 0.243)  !important;
+    border-color:  rgba(3, 255, 255, 0.288)  !important;
   }
 
   @media screen and (max-width: 1400px) {
@@ -221,11 +221,31 @@ body {
         width: 78% !important;
     }
     .about-me {
-        margin-left: 80px !important;
+        margin-left: 70px !important;
         margin-bottom: 110px !important;
     }
     .stage-cube-cont {
         margin-right: 20px !important;
         margin-top: 250px !important;
+    }
+  }
+
+  @media screen and (max-width: 400px) {
+    .likewhat {
+        height: 60px !important;
+        width: 40% !important;
+    }
+    .contactMe {
+        margin-top: 20px;
+    }
+    .special {
+        width: 44% !important;
+        height: 38px !important;
+        padding-top: 2px !important;
+    }
+    .tech {
+        width: 58% !important;
+        height: 36px !important;
+        padding-top: 2px !important;
     }
   }
