--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -22,7 +22,10 @@
         margin-bottom: 10px;
     }
     .home {
-        margin-left: -30px;
+        margin-left: -20px;
+    }
+    .btn {
+        margin-right: -36px;
     }
 }
 
@@ -35,5 +38,8 @@
 @media screen and (min-width: 1022px) {
     .home {
         margin-left: 0px;
+    }
+    .btn {
+        margin-right: -24px;
     }
 }
