finally fixed problems with the navbar, it all works and looks exactly as expected now

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,7 @@
+.navbar-toggler {
+    border: none !important;
+}
+
 @media screen and (max-width: 768px) {
     .logo {
         width: 98% !important;
