--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,7 +7,7 @@
     }
     .footer {
         display: flex;
-        flex-direction: column;
+        align-items: center;
     }
     .socials {
         text-align: center;
