contact page css has been redone and the footer has a redesgin

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-html, body, #app, app>div, #root {
+html {
     width: 100%;
-    height: auto;
+    overflow-x: hidden;
+    /* height: 100%; */
 }
+/* body {
+    min-height: 100%
+} */
 
 body, #app, app>div, #root {
     background-color: transparent !important;
