--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,10 @@
-@media screen and (max-width: 510px) {
+@media screen and (max-width: 554px) {
     .bi {
         font-size: 24px !important;
     }
-    .text-light {
+    .text {
         text-align: center;
+        color: rgb(78, 78, 78);
     }
     .footer {
         display: flex;
@@ -11,5 +12,38 @@
     }
     .socials {
         text-align: center;
+    }
+}
+
+.footer {
+    width: 42%;
+    margin-left: 56%;
+}
+
+@media screen and (max-width: 1186px) {
+    .footer {
+        width: 52%;
+        margin-left: 46%;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .footer {
+        width: 62%;
+        margin-left: 34%;
+    }
+}
+
+@media screen and (max-width: 804px) {
+    .footer {
+        width: 72%;
+        margin-left: 20%;
+    }
+}
+
+@media screen and (max-width: 702px) {
+    .footer {
+        width: 90%;
+        margin-left: 5%;
     }
 }
