--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -20,7 +20,8 @@
     margin-bottom: 25px;
     width: 20%;
     height: 40px;
-    background-color: rgba(245, 245, 245, 0.7) !important;
+    background-color: rgba(245, 245, 245, 0.5) !important; 
+    backdrop-filter: blur(20px);
 }
 
 .tech {
@@ -28,7 +29,8 @@
     margin-bottom: 10px;
     width: 30%;
     height: 40px;
-    background-color: rgba(245, 245, 245, 0.7) !important;
+    background-color: rgba(245, 245, 245, 0.5) !important; 
+    backdrop-filter: blur(20px);
 }
 
 .likewhat {
@@ -39,7 +41,8 @@
     margin-right: 20px;
     width: 24%;
     height: 40px;
-    background-color: rgba(245, 245, 245, 0.7) !important;
+    background-color: rgba(245, 245, 245, 0.5) !important; 
+    backdrop-filter: blur(20px);
 }
 
 .portfolio-block {
