--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -22,6 +22,7 @@
     height: 40px;
     background-color: rgba(245, 245, 245, 0.5) !important; 
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 
 .tech {
@@ -31,6 +32,7 @@
     height: 40px;
     background-color: rgba(245, 245, 245, 0.5) !important; 
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 
 .likewhat {
@@ -43,6 +45,7 @@
     margin-right: 20px;
     background-color: rgba(245, 245, 245, 0.5) !important; 
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 
 .contactMe {
