--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -62,4 +62,7 @@
         margin-bottom: 14px;
         margin-right: 0px !important;
     }
+    .logo {
+        height: 90px !important;
+    }
 }
